--- a/app/globals.css
+++ b/app/globals.css
@@ -1,26 +1,61 @@
 @import "tailwindcss";
 
+html,
+body {
+  background-color: #f3f3f2;
+  scrollbar-width: none;
+  -ms-overflow-style: none;
+  scroll-behavior: smooth;
+}
+
+::-webkit-scrollbar {
+  display: none;
+}
+body {
+  font-family: var(--font-geist), ui-sans-serif, system-ui;
+}
+@keyframes gradient {
+  0% {
+    background-position: 0% 50%;
+  }
+  50% {
+    background-position: 100% 50%;
+  }
+  100% {
+    background-position: 0% 50%;
+  }
+}
+
+.animate-gradient {
+  background-size: 200% 200%;
+  animation: gradient 15s ease infinite;
+}
+.outlined-text {
+  color: transparent;
+  -webkit-text-stroke: 2px #22d3ee;
+}
+.direction-rtl {
+  direction: rtl;
+  unicode-bidi: bidi-override;
+}
 :root {
-  --background: #ffffff;
-  --foreground: #171717;
+  --background: #f3f3f2;
+  --foreground: #f3f3f2;
 }
 
 @theme inline {
   --color-background: var(--background);
   --color-foreground: var(--foreground);
-  --font-sans: var(--font-geist-sans);
-  --font-mono: var(--font-geist-mono);
 }
 
 @media (prefers-color-scheme: dark) {
   :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
+    --background: #f3f3f2;
+    --foreground: #f3f3f2;
   }
 }
 
 body {
   background: var(--background);
   color: var(--foreground);
-  font-family: Arial, Helvetica, sans-serif;
 }
